使用dnsproxy连接socks代理，加快DNS查询速度

--- a/app/src/main/res/values/pdnsd.xml
+++ b/app/src/main/res/values/pdnsd.xml
@@ -4,7 +4,7 @@
 global {\
 	perm_cache=1024;\
 	cache_dir="{DIR}";\
-	server_port = 8091;\
+	server_port = {SRVPORT};\
 	server_ip = 0.0.0.0;\
 	query_method=tcp_only;\
 	min_ttl=15m;\
