在界面上显示app版本和csnet版本

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <EditTextPreference
+        android:key="csnet_version"
+        android:title="@string/csnet_version"
+        android:enabled="false"/>
 
     <ListPreference
         android:key="profile"
