--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,6 +9,14 @@
         android:title="@string/prof_del"/>
 
     <item
+        android:id="@+id/pick_csnet_binary"
+        android:title="@string/pick_csnet_binary"/>
+
+    <item
+        android:id="@+id/reset_csnet_binary"
+        android:title="@string/reset_csnet_binary"/>
+
+    <item
         android:id="@+id/switch_main"
         android:title="@string/switch_main"
         android:showAsAction="always"
